# trading-crab-lib

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_pipeline.py
config/: email.example.yaml  settings.yaml
data/: fred_api_datasets_snapshot_20260216.pickle  grok_quarter_classifications_20260201.xlsx  grok_quarter_classifications_20260216.pickle  multpl_datasets_snapshot_20260216.pickle  prepared_quarterly_data_smoothed_20260301.pickle  standardized_quarterly_data_20260216.pickle
pipelines/: 01_ingest.py  02_features.py  03_cluster.py  04_regime_label.py  05_predict.py  06_asset_returns.py  07_dashboard.py  08_diagnostics.py  09_tactics.py
scripts/: jupyter_notebook_local.sh  run_weekly_report.py  setup.sh
src/trading_crab_lib/: __init__.py  asset_returns.py  checkpoints.py  cluster_comparison.py  clustering.py  config.py  density.py  diagnostics.py  email.py  gmm.py  plotting.py  regime.py  reporting.py  runtime.py  spectral.py  tactics.py  transforms.py
src/trading_crab_lib/ingestion/: assets.py  fred.py  grok.py  multpl.py
src/trading_crab_lib/prediction/: __init__.py  classifier.py
tests/: conftest.py  test_constraints_etf_universe.py  test_constraints_frequency.py  test_email_weekly.py  test_models_behavior.py  test_models_boosting.py  test_models_interpret_tree.py  test_models_regime.py  test_models_reporting.py  test_pipelines_ingest_features.py  test_release_smoke.py  test_scripts_weekly_report.py
tests/unit/: test_checkpoints.py  test_cluster_comparison.py  test_clustering.py  test_clustering_exploration.py  test_config.py  test_density.py  test_diagnostics_rrg.py  test_fred_series_config.py  test_gmm.py  test_ingestion.py  test_prediction_flat.py  test_regime.py  test_returns.py  test_spectral.py  test_tactics.py  test_transforms.py  test_yield_curve_features.py
